objects/vlocity_ins__InsuranceClaimInvolvedInjury__c.object
<CustomObject>
    <description>Represents insurance claimant injury information reported under a claim such as severity and kind of injury, parties involved and medical cost. Master-detail child object of Claim.</description>
    <fields>
        <fullName>vlocity_ins__AdjustedAmount__c</fullName>
        <description>DEPRECATED</description>
        <label>Adjusted Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AllocatedReserveAmount__c</fullName>
        <description>DEPRECATED</description>
        <label>Allocated Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AssetPartyRelationshipId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Held Product Relationship</label>
        <referenceTo>vlocity_ins__AssetPartyRelationship__c</referenceTo>
        <relationshipLabel>Involved Injuries</relationshipLabel>
        <relationshipName>InvolvedInjuries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__AttributeSelectedValues__c</fullName>
        <label>Attribute Selected Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimId__c</fullName>
        <label>Claim</label>
        <referenceTo>vlocity_ins__InsuranceClaim__c</referenceTo>
        <relationshipLabel>Involved Injuries</relationshipLabel>
        <relationshipName>Involved_Injuries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimantId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Claimant Id</label>
        <referenceTo>vlocity_ins__InsuranceClaimPartyRelationship__c</referenceTo>
        <relationshipLabel>Involved Injuries</relationshipLabel>
        <relationshipName>InvolvedInjuries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClaimantParty__c</fullName>
        <formula>vlocity_ins__ClaimantId__r.vlocity_ins__Party__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Related Party</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ImageId__c</fullName>
        <formula>vlocity_ins__SpecProduct2Id__r.vlocity_ins__ImageId__c</formula>
        <label>Product Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OriginalTotalReserveAmount__c</fullName>
        <description>DEPRECATED</description>
        <label>Original Total Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PaidAmount__c</fullName>
        <description>DEPRECATED</description>
        <label>Paid Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__PartyId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Party</label>
        <referenceTo>vlocity_ins__Party__c</referenceTo>
        <relationshipLabel>Involved Injuries</relationshipLabel>
        <relationshipName>Involved_Injuries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__RemainingReserveAmount__c</fullName>
        <description>DEPRECATED</description>
        <formula>MAX(vlocity_ins__TotalReserveAmount__c, vlocity_ins__AllocatedReserveAmount__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Remaining Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Severity__c</fullName>
        <label>Severity</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SpecProduct2Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Involved Injuries</relationshipLabel>
        <relationshipName>InvolvedInjury</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalReserveAmount__c</fullName>
        <description>DEPRECATED</description>
        <label>Total Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__TotalReserveStatus__c</fullName>
        <description>DEPRECATED</description>
        <label>Total Reserve Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>ApprovedRollup</fullName>
                </value>
                <value>
                    <fullName>Reverted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__TreatedBy__c</fullName>
        <label>Treated By</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__UnallocatedReserveAmount__c</fullName>
        <description>DEPRECATED</description>
        <formula>MAX((vlocity_ins__TotalReserveAmount__c - vlocity_ins__AllocatedReserveAmount__c), 0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Unallocated Reserve Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Involved Party</label>
    <nameField>
        <label>Injury Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Involved Parties</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>